# TypeHelper

./: .gitignore  CMakeLists.txt  LICENSE  build-linux-debug-qtcreator.sh  conanfile.py  git-version.cmake  git_version.h.in
res/forms/: ClassGenerator.ui  MainWindow.ui
src/: ClassGeneratorWidget.cpp  ClassGeneratorWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
src/model/: MemberModel.cpp  MemberModel.h  StructuresModel.cpp  StructuresModel.h  types.h
